feat: complete phase 2 backend reliability